<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bicycle_button"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="onVehicleItem1Click"
        android:text="@string/vehicle_item_1"
        android:textSize="20sp"
        android:background="#8fd694"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/car_button"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="#8fd694"
        android:onClick="onVehicleItem2Click"
        android:text="@string/vehicle_item_2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bicycle_button" />

    <Button
        android:id="@+id/motorcycle_button"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="#8fd694"
        android:onClick="onVehicleItem3Click"
        android:text="@string/vehicle_item_3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_button" />

    <Button
        android:id="@+id/transitbus_button"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="#8fd694"
        android:onClick="onVehicleItem4Click"
        android:text="@string/vehicle_item_4"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motorcycle_button" />

    <Button
        android:id="@+id/van_button"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="#8fd694"
        android:onClick="onVehicleItem5Click"
        android:text="@string/vehicle_item_5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transitbus_button" />

</androidx.constraintlayout.widget.ConstraintLayout>