<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/dairy_button"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="onFoodItem1Click"
        android:text="@string/food_item_1"
        android:textSize="20sp"
        android:background="#8fd694"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fat_button"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="onFoodItem2Click"
        android:text="@string/food_item_2"
        android:textSize="20sp"
        android:background="#8fd694"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dairy_button" />

    <Button
        android:id="@+id/grain_button"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="onFoodItem3Click"
        android:text="@string/food_item_3"
        android:textSize="20sp"
        android:background="#8fd694"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fat_button" />

    <Button
        android:id="@+id/meat_button"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="onFoodItem4Click"
        android:text="@string/food_item_4"
        android:textSize="20sp"
        android:background="#8fd694"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grain_button" />

    <Button
        android:id="@+id/vegetables_button"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="onFoodItem5Click"
        android:text="@string/food_item_5"
        android:textSize="20sp"
        android:background="#8fd694"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meat_button" />

</androidx.constraintlayout.widget.ConstraintLayout>